made links clickable by fixing z-indexing

--- a/css/projects.css
+++ b/css/projects.css
@@ -53,7 +53,7 @@ body {
 	padding-left: 0vw;
 	position: relative;
 	left: 20vw;
-	top: 5vh;
+	top: 10.66666666666666667vh;
 	text-align: center;
 	width: 60vw;
 	height: 100vh;
@@ -62,7 +62,7 @@ body {
 	border-style: solid;
 	border-color: black;
 	border-radius: 5px;
-	z-index: -1;
+	border-top: none;
 }
 
 .projects > div {
@@ -76,4 +76,11 @@ body {
 	text-decoration: bold;
 	padding-top: 1%;
 	padding-bottom: 1%;
+}
+
+.projects > div > li > a {
+	color: rgb(0,0,200);
+}
+.projects > div > li > a:hover {
+	color: rgb(0,0,150);
 }
